SourceMetaData/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Email_BCC_Addresses__c</fullName>
        <description>The emaill addrs that the email has been BCC&apos;d to</description>
        <inlineHelpText>The emaill addrs that the email has been BCC&apos;d to</inlineHelpText>
        <label>Email BCC Addresses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Body__c</fullName>
        <description>A concatenated summary of the email body</description>
        <inlineHelpText>A concatenated summary of the email body</inlineHelpText>
        <label>Email Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_CC_Addresses__c</fullName>
        <description>The email addrs that the email has been cc&apos;d to</description>
        <inlineHelpText>The email addrs that the email has been cc&apos;d to</inlineHelpText>
        <label>Email CC Addresses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Comment__c</fullName>
        <description>The comment that was sent in with the email from the service team</description>
        <inlineHelpText>The comment that was sent in with the email from the service team</inlineHelpText>
        <label>Email Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Status_Reported_String__c</fullName>
        <description>The status that has been reported in the email</description>
        <inlineHelpText>The status that has been reported in the email</inlineHelpText>
        <label>Status Reported</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <description>The subject line of the sent email.</description>
        <inlineHelpText>The subject line of the sent email.</inlineHelpText>
        <label>Email Subject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_To_Addresses__c</fullName>
        <description>The addrs the email has been sent to.</description>
        <inlineHelpText>The addrs the email has been sent to.</inlineHelpText>
        <label>Email To Addresses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notification_From_Address__c</fullName>
        <description>The email address that the notification was sent from</description>
        <inlineHelpText>The email address that the notification was sent from</inlineHelpText>
        <label>Notification From Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Notification_From_Name__c</fullName>
        <description>The name of the person who has sent in the notification (from the email)</description>
        <inlineHelpText>The name of the person who has sent in the notification (from the email)</inlineHelpText>
        <label>Notification From Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Type__c</fullName>
        <description>The notification type that has been supplied by the service team in the email (error is used where one of the 3 notifications has not been matched)</description>
        <inlineHelpText>The notification type that has been supplied by the service team in the email (error is used where one of the 3 notifications has not been matched)</inlineHelpText>
        <label>Notification Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>A summary of the task</description>
        <inlineHelpText>A summary of the task</inlineHelpText>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Service_Responses</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>Notification_From_Name__c</columns>
        <columns>Email_Status_Reported_String__c</columns>
        <columns>Notification_Type__c</columns>
        <columns>Email_Comment__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.External_Notifications</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>My Open Service Responses</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>